[package]
name = "nia_events"
version = "0.1.0"
authors = ["mirai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
xcb = "0.9.0"
evdev-rs = "0.3.1"
uinput-sys = "0.1.7"
uinput = "0.1.3"
lazy_static = "1.4.0"
colour = "0.5.0"
